  referring to examples and other source files from the wiki. This way
  the wiki references will not need to be updated for each release.
* Added test example page for trying and testing event attributes
  src/webapp/examples/test_example/test.html -- LarryK rev 1598
* Fixed issues caused when events don't have title attribute.
  Issue tracker #20 -- LarryK rev 1598

Version 2.2.0 -- September 23, 2008
* Prep for 2.2.0: updated RELEASE_NOTES -- LarryK rev 1593
* Added comments per MPS in timeline-api.js that bundle=true
  is needed unless you've installed full source
  -- LarryK rev 1593
* Added comments to original-painter.js -- LarryK rev 1593
* Re-built to pick up new simile-ajax that includes jquery 1.2.6
  -- eob rev 1589
  
Version 2.1.0 -- September 19, 2008
* Prep for 2.1.0: updated examples, readme. created RELEASE_NOTES LarryK
* Added timeline_libraries.zip to build file. Removed install.sh
  -- LarryK rev 1579  
* Event attribute classname is added to the classnames for the event's label
  and tape divs. Eg classname of 'hot_event' will result in div classes of
  'timeline-event-label hot_event' and 'timeline-event-tape hot_event' for
  the event's Timeline label and tape, respectively. Change is that classname
  is now added to the tape's div. -- LarryK rev 1576
* Re-worked function Timeline.DefaultEventSource.Event in sources.js to use
  named arguments (via a hash/anon object) rather than positional arguments.
  19 positional arguments are too many! Now much easier and cleaner to add
  additional event attributes.  
  Note: this is a breaking change for anyone who calls Event directly. But since
  the wiki page about dynamic events recommends calling loadXML, etc, I
  hoping that this won't cause anyone much pain. And the new format is
  MUCH easier to use as a developer.  -- LarryK rev 1576
* New event attribute eventID is a 'cookie' attribute that is stored, not used
  by the Timeline library. If you write a custom labeller or event bubble